# Ch-aronte

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt
Ch-obolos/dex/: custom-plug-dex.yml  dex-migrating.yml  example_pyinfra.py  playbook_test.yaml  secrets_custom-plug-dex.yml
Ch-obolos/dex/particoes/: parts.yml
Ch-obolos/dex/users/: users.yml
external_plugins/charonte-mock-plugin/: pyproject.toml
external_plugins/charonte-mock-plugin/src/charonte_mock_plugin/: roles.py
roles/: README.md
roles/dotfiles/tasks/: main.yml
roles/particionamento/tasks/: main.yml
roles/pkgs/tasks/: main.yml  pkgs.py
roles/repos/tasks/: main.yml
src/charonte/: cli.py  pyproject.toml
src/charonte/explainations/pkgs/: pkgs.py
src/charonte/explainations/region/: region.py
src/charonte/explainations/repos/: repos.py
src/charonte/explainations/services/: services.py
src/charonte/explainations/users/: users.py
src/charonte/roles/aurHelper/tasks/: helper.py
src/charonte/roles/bootloader/tasks/: bootloader.py
src/charonte/roles/pkgs/tasks/: pkgs.py
src/charonte/roles/reflector/tasks/: reflector.py
src/charonte/roles/region/tasks/: region.py
src/charonte/roles/repos/tasks/: repos.py
src/charonte/roles/services/tasks/: services.py
src/charonte/roles/users/tasks/: users.py
tests/: test_aur_helper.py  test_cli.py  test_pkgs.py  test_region.py  test_repos.py  test_services.py  test_users.py
