[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ch-aronte-core"
version = "0.1.0"
description = "Core arch roles for the Ch-aOS project suite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyinfra",
    "omegaconf",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points."chaos.roles"]
packages     = "charonte.roles.pkgs.tasks.pkgs:main"
users        = "charonte.roles.users.tasks.users:run_user_logic"
repositories = "charonte.roles.repos.tasks.repos:run_repo_logic"
bootloader   = "charonte.roles.bootloader.tasks.bootloader:runBootloader"
helpers      = "charonte.roles.aurHelper.tasks.helper:run_aur"
services     = "charonte.roles.services.tasks.services:run_service_logic"
region       = "charonte.roles.region.tasks.region:run_region_logic"
reflector    = "charonte.roles.reflector.tasks.reflector:reflectorLogic"

[project.entry-points."chaos.aliases"]
allPkgs = "packages"
all-packages = "packages"
natPkgs = "packages"
native-packages = "packages"
aurPkgs = "packages"
aur-packages = "packages"
pkgs = "packages"
usr = "users"
repos = "repositories"
boot = "bootloader"
