[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ch-aronte-core"
version = "0.1.3"
description = "Core arch roles for the Ch-aOS project suite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyinfra",
    "omegaconf",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points."chaos.roles"]
packages     = "charonte.roles.pkgs.tasks.pkgs:run_all_pkg_logic"
native_packages = "charonte.roles.pkgs.tasks.pkgs:run_nat_logic"
aur_packages = "charonte.roles.pkgs.tasks.pkgs:run_aur_logic"
users        = "charonte.roles.users.tasks.users:run_user_logic"
repositories = "charonte.roles.repos.tasks.repos:run_repo_logic"
bootloader   = "charonte.roles.bootloader.tasks.bootloader:runBootloader"
helpers      = "charonte.roles.aurHelper.tasks.helper:run_aur"
services     = "charonte.roles.services.tasks.services:run_service_logic"
region       = "charonte.roles.region.tasks.region:run_region_logic"
reflector    = "charonte.roles.reflector.tasks.reflector:reflectorLogic"

[project.entry-points."chaos.aliases"]
allPkgs = "packages"
natPkgs = "native_packages"
aurPkgs = "aur_packages"
pkgs = "packages"
usr = "users"
repos = "repositories"
boot = "bootloader"

[project.entry-points."chaos.explain"]
users = "charonte.explainations.users.users:UsersExplain"
repos = "charonte.explainations.repos.repos:ReposExplain"
pkgs = "charonte.explainations.pkgs.pkgs:PkgsExplain"
region = "charonte.explainations.region.region:RegionExplain"
services = "charonte.explainations.services.services:ServicesExplain"
