[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ch-aronte"
version = "0.1.3"
description = "Core arch roles for the Ch-aOS project suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinfra",
    "omegaconf",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points."chaos.roles"]
packages     = "charonte.roles.pkgs.tasks.pkgs:PkgsAllRole"
native_packages = "charonte.roles.pkgs.tasks.pkgs:PkgsNativeRole"
aur_packages = "charonte.roles.pkgs.tasks.pkgs:PkgsAurRole"
users        = "charonte.roles.users.tasks.users:UsersRole"
repositories = "charonte.roles.repos.tasks.repos:ReposRole"
bootloader   = "charonte.roles.bootloader.tasks.bootloader:BootloaderRole"
helpers      = "charonte.roles.aurHelper.tasks.helper:AurHelperRole"
services     = "charonte.roles.services.tasks.services:ServicesRole"
region       = "charonte.roles.region.tasks.region:RegionRole"
reflector    = "charonte.roles.reflector.tasks.reflector:ReflectorRole"

[project.entry-points."chaos.aliases"]
allPkgs = "packages"
natPkgs = "native_packages"
aurPkgs = "aur_packages"
pkgs = "packages"
usr = "users"
repos = "repositories"
boot = "bootloader"

[project.entry-points."chaos.explain"]
users = "charonte.explainations.users.users:UsersExplain"
repos = "charonte.explainations.repos.repos:ReposExplain"
pkgs = "charonte.explainations.pkgs.pkgs:PkgsExplain"
region = "charonte.explainations.region.region:RegionExplain"
services = "charonte.explainations.services.services:ServicesExplain"
