[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "charonte-mock-plugin"
version = "0.1.0"
authors = [
    {name = "Gemini", email = "gemini@google.com"}
]
description = "A mock plugin for Ch-aronte"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."charonte.roles"]
mock-role = "charonte_mock_plugin.roles:mock_role"

