[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "charonte"
version = "0.1.0"
description = "Declarative OS installer and configuration manager for Arch Linux."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyinfra",
    "omegaconf",
    "passlib>=1.7.4",
]

[project.scripts]
B-coin = "charonte.cli:main"

[project.entry-points."charonte.roles"]
packages     = "charonte.roles.pkgs.tasks.pkgs:run_all_pkg_logic"
users        = "charonte.roles.users.tasks.users:run_user_logic"
repositories = "charonte.roles.repos.tasks.repos:run_repo_logic"
bootloader   = "charonte.roles.bootloader.tasks.bootloader:run_bootloader"
